--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,19 @@ server:
   port: 8085
   servlet:
     context-path: /
+
+info:
+  app:
+    name: @project.name@
+    version: @project.version@
+    description: @project.description@
+
+management:
+  endpoints:
+    web:
+      base-path: / 
+      exposure:
+        include: health, info, metrics, prometheus
+  info:
+    env:
+      enabled: true
